@@ -3,7 +3,7 @@ CSC = mcs
 
 DLLS = /r:gtk-sharp.dll /r:glib-sharp.dll /r:pango-sharp.dll /r:gdk-sharp.dll /r:System.Drawing.dll
 
-all:
+all: *.cs
 	$(CSC) -g /out:GtkDemo.exe *.cs $(DLLS)
 
 clean:
