@@ -1,4 +1,4 @@
-This port of gtk-demo.c is still INCOMPLETE. If you can't contribute to it
+This port of gtk-demo.c is still INCOMPLETE. If you can contribute to it
 don't hesistate to mail your patches at the gtk-sharp-list@lists.ximian.com
 
 
