@@ -1,3 +1,8 @@
+2004-01-10  John Luke  <jluke@cfl.rr.com>
+	
+	* samples/GtkDemo/*.cs: make it compile
+	patch from Yves Kurz <ml_yves@magnific.ch>
+
 2004-01-09  Mike Kestner  <mkestner@ximian.com>
 
 	* gtk/Gtk.metadata : hide NotebookPage.Num method
